--- a/package.json
+++ b/package.json
@@ -28,7 +28,17 @@
     "@babel/preset-env": "^7.10.3",
     "@hot-loader/react-dom": "^16.13.0+4.12.20",
     "webpack-dev-server": "^3.11.0",
+    "normalize.css": "^8.0.1",
+    "eslint": "^7.3.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "css-loader": "^3.6.0",
+    "svg-react-loader": "^0.4.6",
     "style-loader": "^1.2.1",
     "postcss-loader": "^3.0.0",
     "autoprefixer": "^9.8.4",
