--- a/package.json
+++ b/package.json
@@ -10,25 +10,26 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack -d --mode development",
     "build-prod": "webpack -p --mode production",
-    "start": "webpack-dev-server --hot --mode development"
+    "start": "webpack-dev-server --hot --mode development --history-api-fallback"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21"
+    "react-hot-loader": "^4.12.21",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "@types/react": "^16.9.41",
-    "@types/react-dom": "^16.9.8",
-    "@babel/preset-react": "^7.10.1",
-    "babel-loader": "^8.1.0",
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
     "@hot-loader/react-dom": "^16.13.0+4.12.20",
-    "webpack-dev-server": "^3.11.0",
-    "normalize.css": "^8.0.1",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "autoprefixer": "^9.8.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.6.0",
     "eslint": "^7.3.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^4.0.2",
@@ -37,15 +38,17 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "css-loader": "^3.6.0",
-    "svg-react-loader": "^0.4.6",
-    "style-loader": "^1.2.1",
-    "postcss-loader": "^3.0.0",
-    "autoprefixer": "^9.8.4",
-    "typescript": "^3.9.5",
-    "ts-loader": "^7.0.5",
     "file-loader": "^6.0.0",
+    "normalize.css": "^8.0.1",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^2.0.5",
+    "style-loader": "^1.2.1",
+    "svg-react-loader": "^0.4.6",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
     "url-loader": "^4.1.0",
-    "prettier": "^2.0.5"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
