added redux, store, fetching cooks from db

--- a/package.json
+++ b/package.json
@@ -9,24 +9,32 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack -d --mode development",
-    "build-prod": "webpack -p --mode production",
+    "build-prod": "webpack -p --mode production --history-api-fallback",
     "start": "webpack-dev-server --hot --mode development --history-api-fallback"
   },
   "dependencies": {
     "@types/react-router-dom": "^5.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-hot-loader": "^4.12.21",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
     "@hot-loader/react-dom": "^16.13.0+4.12.20",
+    "@types/node": "^13.11.0",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.5",
+    "@types/redux-actions": "^2.6.1",
+    "@types/webpack-env": "^1.15.2",
     "autoprefixer": "^9.8.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
@@ -42,10 +50,11 @@
     "normalize.css": "^8.0.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "style-loader": "^1.2.1",
     "svg-react-loader": "^0.4.6",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.5",
+    "typescript": "^3.9.7",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
