--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,29 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
         "sourceMap": true,
-        "strict": true,
-        "noImplicitReturns": true,
-        "noImplicitAny": true,
+        "target": "es5",
+        "jsx": "react",
         "module": "es6",
         "moduleResolution": "node",
-        "target": "es5",
-        "allowJs": true,
-        "jsx": "react"
+        "experimentalDecorators": true,
+        "declaration": false,
+        "removeComments": true,
+        "noImplicitReturns": true,
+        "noUnusedLocals": true,
+        "strict": true,
+        "outDir": "build",
+        "lib": ["es6", "es7", "dom"],
+        "baseUrl": "src",
+        "paths": {
+            "app/*": ["./app/*"]
+        },
+        "allowSyntheticDefaultImports": true
     },
     "files": [
         "custom.d.ts"
     ],
     "include": [
         "./src/**/*", "src/custom.d.ts"
-    ]
+    ],
+    "exclude": ["build", "node_modules"]
 }
