eslint config, webpack настройка, частичный рефакторинг

--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "clean": "rm dist/bundle.js",
     "build-dev": "webpack -d --mode development",
     "build-prod": "webpack -p --mode production --history-api-fallback",
     "start": "webpack-dev-server --hot --mode development --history-api-fallback"
   },
   "dependencies": {
     "@types/react-router-dom": "^5.1.5",
+    "autoprefixer": "^10.0.2",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.1.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0"
@@ -35,20 +36,20 @@
     "@types/react-redux": "^7.1.5",
     "@types/redux-actions": "^2.6.1",
     "@types/webpack-env": "^1.15.2",
-    "autoprefixer": "^9.8.4",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "autoprefixer": "^10.0.2",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
     "eslint": "^7.3.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "file-loader": "^6.0.0",
     "normalize.css": "^8.0.1",
-    "postcss-loader": "^3.0.0",
+    "postcss": ">= 8.1",
+    "postcss-loader": ">= 4.0.3",
     "prettier": "^2.0.5",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^1.2.1",
