--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
         "custom.d.ts"
     ],
     "include": [
-        "./src/**/*", "src/custom.d.ts"
+        "./src/**/*", "src/custom.d.ts", "postcss.config.js"
     ],
     "exclude": ["build", "node_modules"]
 }
